# robotframework-datadriver

./: .gitignore  .gitpod.yml  CONTRIBUTION.md  COPYRIGHT.txt  MANIFEST.in  README.MD  README.md  Readme.rst  create_readme.py  dev-requirements.txt  pyproject.toml  run_atest.py  setup.cfg  setup.py  setup_python_env.ps1  start_openapi_testserver.py
atest/: rf_cli.args  run_atest.bat  run_atest.py  run_atest.sh  run_atest_pabot.bat
atest/TestCases/ConfigKeyword/: config_keyword_generate_file.robot  custom_reader.robot
atest/TestCases/DataTypes/: Check_DataTypes.csv  Check_DataTypes.robot  Check_DataTypes_xlsx.robot  Check_DataTypes_xlsx.xlsx  LiteralEval.csv  LiteralEval.robot  Types_in_dicts.csv  Types_in_dicts.robot
atest/TestCases/Defaults/CSV/: defaults.csv  defaults.robot  generic_csv_reader.csv  generic_csv_reader.robot  test_case_names.csv  test_case_names.robot  test_case_no_names.csv  test_case_no_names.robot
atest/TestCases/Defaults/GLOB/: defaults_glob_files.robot  (+1 more)
atest/TestCases/Setup_Teardown/: Setups_Teardowns.csv  Setups_Teardowns.robot
atest/TestCases/Some_Fail/: 2_of_10_fail.csv  2_of_10_fail.robot
atest/TestCases/Tags/: foo_reader.py  test.robot
atest/TestCases/Timeouts/: timeout.csv  timeout.robot
atest/TestCases/csv_reader_config/: reader_by_filename.robot  reader_by_module_name.robot  reader_by_name.robot  reader_by_path.robot  tab-csv-file-name.tsv
atest/TestCases/custom_reader/: custom_reader.py  custom_reader.robot  custom_reader_local.robot  data.json  dummy.txt  file_search_strategy_none.robot  generic_json_reader.robot  jsonreader.robot  with_path_and_file.robot
atest/TestCases/first_col/: documentation.csv  documentation.robot  tags.csv  tags.robot
atest/TestCases/openapi/: custom_user_mappings.py  load_from_url.robot  load_json.robot  load_yaml.robot  petstore_openapi.json  petstore_openapi.yaml
atest/TestCases/performance/: 10.000.robot  10000.csv
doc/: DataDriver.html
docs/: index.html
example/Login Tests/: DataDriven.csv  DataDriven.pict  DataDriven.pictout  DataDriven.robot  DataDriven.xls  DataDriven.xlsx  DataDriven_pict.robot  DataDriven_regex.robot  DataDriven_xls.robot  DataDriven_xlsx.robot  invalidLogins.robot  log.html  login_resources.robot  output.xml  report.html  validTest.robot
example/Simple/: FilterCases.robot  README.md  Simple.csv
example/demo_web_server/: server.py
src/DataDriver/: AbstractReaderClass.py  Abstract_Reader_Class.py  DataDriver.py  GlobDataReader.py  ReaderConfig.py  __init__.py  argument_utils.py  csv_reader.py  csvreader.py  generic_csv_reader.py  generic_json_reader.py  glob_reader.py  json_reader.py  openapi_reader.py  pict_reader.py  pictreader.py  rerunfailed.py  search.py  utils.py  xls_reader.py  xlsreader.py  xlsx_reader.py
src/DataDriver/openapi/: dto_base.py  dto_utils.py  openapi_executors.libspec  openapi_executors.py  openapi_runner.py
(+17 files in other folders)
