[metadata]
name = robotframework-datadriver
version = attr: src.DataDriver.DataDriver.__version__
author = René Rohner(Snooz82)
author_email = snooz@posteo.de
description = A library for Data-Driven Testing.
long_description = file: Readme.rst
long_description_content_type = text/x-rst
url = https://github.com/Snooz82/robotframework-datadriver
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Testing :: Acceptance
    Framework :: Robot Framework

[options]
packages = find:
package_dir =
    = src
install_requires =
    robotframework >= 4.0.2
    docutils
    Pygments
python_requires = >=3.6.15

[options.extras_require]
xls =
    pandas
    xlrd >= 1.2.0
    openpyxl

[options.packages.find]
where = src